# bevy-realtime

./: Cargo.toml  README.md
examples/: broadcast.rs  complex-postgres.rs  postgres.rs  postgres_authed.rs  presence.rs
src/: channel.rs  client.rs  lib.rs  postgres_changes.rs  presence.rs
src/message/: realtime_message.rs
supabase/: config.toml
supabase/migrations/: 20240526193040_init.sql
