[package]
name = "bevy-realtime"
version = "0.2.0"
edition = "2021"
description = "bevy plugin for supabase realtime integration"
license = "MIT OR Apache-2.0"
keywords = ["bevy", "supabase", "game", "messaging"]
repository = "https://github.com/bytemunch/bevy-supabase"
homepage = "https://github.com/bytemunch/bevy-supabase"
readme = "README.md"
documentation = "https://docs.rs/bevy-supabase-realtime"

[dependencies]
bevy = "0.14.2"
bevy_crossbeam_event = "0.6.0"
crossbeam = { version = "0.8.4", features = [
  "crossbeam-channel",
  "crossbeam-deque",
] }
native-tls = "0.2.12"
serde = "1.0.210"
serde_json = "1.0.128"
tungstenite = { version = "0.24.0", features = ["native-tls"] }
uuid = { version = "1.10.0", features = ["v4"] }

[dev-dependencies]
bevy-gotrue = { git = "https://github.com/bytemunch/bevy-gotrue/" }
bevy_http_client = "0.6.0"
