[package]
name = "bevy-realtime"
version = "0.2.0"
edition = "2021"
description = "bevy plugin for supabase realtime integration"
license = "MIT OR Apache-2.0"
keywords = ["bevy", "supabase", "game", "messaging"]
repository = "https://github.com/bytemunch/bevy-supabase"
homepage = "https://github.com/bytemunch/bevy-supabase"
readme = "README.md"
documentation = "https://docs.rs/bevy-supabase-realtime"

[dependencies]
bevy = "0.15"
bevy_crossbeam_event = "0.7.0"
crossbeam = { version = "0.8.4", features = [
  "crossbeam-channel",
  "crossbeam-deque",
] }
native-tls = "0.2.12"
serde = "1.0.216"
serde_json = "1.0.134"
tungstenite = { version = "0.26.1", features = ["native-tls"] }
uuid = { version = "1.11.0", features = ["v4"] }

[dev-dependencies]
bevy-gotrue = { git = "https://github.com/bas-ie/bevy-gotrue/", branch = "0.15" }
bevy_http_client = "0.7.0"
postgres = "0.19.9"
